cmake_minimum_required(VERSION 3.6)
project(f5-threading)

add_library(f5-threading INTERFACE)
target_include_directories(f5-threading INTERFACE include)
target_link_libraries(f5-threading INTERFACE)
target_compile_definitions(f5-threading INTERFACE BOOST_COROUTINES_NO_DEPRECATION_WARNING)
target_compile_definitions(f5-threading INTERFACE BOOST_COROUTINE_NO_DEPRECATION_WARNING)
if(CMAKE_VERSION VERSION_LESS "3.8")
    message(WARNING "This verison of cmake is too old to request C++17 for f5-threading.")
    target_compile_options(f5-threading INTERFACE -std=c++17)
else()
    target_compile_features(f5-threading INTERFACE cxx_std_17)
endif()
install(DIRECTORY include/f5 DESTINATION include)

if(TARGET check)
    enable_testing()
    add_subdirectory(test)
endif()
